# nz_nshm2022_nonpoisson

./: CREDITS.md  LICENSE  MANIFEST.in  README.md  environment.yml  hazard_lib.py  make_examples.py  requirements.txt  setup.cfg
examples/multiplicative/: job.ini
examples/negbinom_floor_multiplicative/: grid.txt
forecasts/hybrids/paraview/: ao.vti  ao_eepas.vti  at.vti  at_eepas.vti  m.vti  m_eepas.vti
forecasts/negbinom_floors/paraview/: npfe_ao.vti  npfe_ao_eepas.vti  npfe_at.vti  npfe_at_eepas.vti  npfe_m.vti  npfe_m_eepas.vti
forecasts/negbinom_floors/src/: npfe_ao.csv  npfe_at.csv  npfe_m.csv
forecasts/poisson_floors/paraview/: fe_ao.vti  fe_ao_eepas.vti  fe_at.vti  fe_at_eepas.vti  fe_m.vti  fe_m_eepas.vti
forecasts/poisson_floors/src/: fe_ao.csv  fe_at.csv  fe_m.csv
hazard/oq_sources/hybrids/ao/: job.ini
hazard/oq_sources/hybrids/ao_eepas/: job.ini
hazard/oq_sources/hybrids/at/: job.ini
hazard/oq_sources/hybrids/at_eepas/: job.ini
hazard/oq_sources/hybrids/m/: job.ini
hazard/oq_sources/hybrids/m_eepas/: job.ini
hazard/oq_sources/negbinom_floors/npfe_ao/: job.ini
hazard/oq_sources/negbinom_floors/npfe_ao_eepas/: job.ini
hazard/paraviews/hybrids/: ao_e_stats.vti  ao_stats.vti  at_e_stats.vti  at_stats.vti  m_e_stats.vti  m_stats.vti
hazard/paraviews/negbinom_floors/: npfe_ao_e_stats.vti  npfe_ao_stats.vti  npfe_at_e_stats.vti  npfe_at_stats.vti  npfe_m_e_stats.vti  npfe_m_stats.vti
hazard/paraviews/poisson_floors/: fe_ao_e_stats.vti  fe_ao_stats.vti  fe_at_e_stats.vti  fe_at_stats.vti  fe_m_e_stats.vti  fe_m_stats.vti
(+13 files in other folders)
