[metadata]
name = nz_nshm2022_nonpoisson
description = Non-Poisson models of the 2022 New Zealand Seismic Hazard Model
long_description = file: README.md
long_description_content_type = text/markdown
author = Pablo Iturrieta
author_email = pciturri@gfz-potsdam.de
license = BSD 3-Clause License
version = 0.1.1
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

url = https://github.com/pabloitu/nz_nshm2022_nonpoisson.git

[options]
packages =
    nonpoisson
install_requires =
    openquake.engine==3.16.4


python_requires = ==3.10.12
zip_safe = no

[flake8]
max-line-length = 79